# ML_KEM_NTT_Accelerator

ml-kem/: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml
ml-kem/.github/workflows/: publish-to-prod.yaml  publish-to-test.yaml  pytest.yaml
ml-kem/docs/: auxiliary.rst  conf.py  index.rst  math.rst  mlkem.rst
ml-kem/mlkem/: benchmark.py  data_types.py  fast_k_pke.py  k_pke.py  ml_kem.py
ml-kem/mlkem/auxiliary/: crypto.py  crypto_hardware.py  general.py  ntt.py  ntt_hardware.py  pynq.bit  pynq.hwh  pynq.tcl  sampling.py
ml-kem/mlkem/math/: field.py  matrix.py  polynomial_ring.py
ml-kem/project/: flow.ipynb  flow_benchmark.ipynb  flow_hardware.ipynb  loaded.xclbin
ml-kem/project/.ipynb_checkpoints/: test_ntt-checkpoint.ipynb
ntt_verilog_codes/: addr_gen.v  butterfly_dual.v  coeff_mem.v  d  generate_hex_files.py  generate_hex_files_new.py  mod_add.v  mod_mult_red.v  mod_sub.v  ntt_controller.v  ntt_ctrl_parser.v  ntt_dma_translator.v  ntt_project.tcl  ntt_top.v  ntt_waves.vcd  tb_ntt_top.v  tb_ntt_top_new.v  tc1_expected.hex  tc1_expected_new.hex  tc1_input.hex  tc1_input_new.hex  tc2_expected.hex  tc2_expected_new.hex  tc2_input.hex  tc2_input_new.hex  twiddle_mem_dual.hex  twiddle_mem_dual.v  twiddle_mem_dual_new.hex  writeback_mux.v
ntt_verilog_codes/NTT/: NTT.xpr  pynq.tcl
ntt_verilog_codes/NTT/NTT.cache/wt/: gui_handlers.wdf  java_command_handlers.wdf  synthesis.wdf  webtalk_pa.xml
ntt_verilog_codes/NTT/NTT.runs/.jobs/: vrs_config_1.xml  vrs_config_10.xml  vrs_config_2.xml  vrs_config_3.xml  vrs_config_6.xml  vrs_config_9.xml
ntt_verilog_codes/NTT/NTT.runs/impl_1/: .place_design.begin.rst  .vivado.begin.rst  gen_run.xml  (+45 more)
ntt_verilog_codes/ip_repo/mlkem_mmio_1.0/: component.xml
(+219 files in other folders)
