[project]
name = "mlkem"
version = "0.0.3"
description = "A module-latice-based key-encapsulation mechanism (ML-KEM). Implements the FIPS-203 standard."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
keywords = ["post-quantum", "cryptography", "fip-203", "kyber", "crystals", "module-lattice-based", "key-encapsulation", "mechanism"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security :: Cryptography",
    "Programming Language :: C",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux"
]

[project.urls]
repo = "https://github.com/AntonKueltz/ml-kem"
docs = "https://mlkem.readthedocs.io"
pypi = "https://pypi.org/project/mlkem"

[build-system]
requires = ["setuptools>=75.6.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "parameterized>=0.9.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.3",
    "setuptools>=75.8.0",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
]

[project.scripts]
benchmark = "mlkem.benchmark:run"

[tool.mypy]
exclude = ["tests/"]

[tool.pytest.ini_options]
pythonpath = ["."]
# addopts = "--cov=mlkem --cov-report=term-missing --cov-fail-under=90"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ['mlkem*']
